use rem for mobile size detection; use inherit color for mail anchor; fix collapsing bug

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -45,6 +45,15 @@ $footerHeight: 0rem;
     color: lighten($paper, 30%);
     background: $subHeaderBg;
     padding: 1rem;
+    a {
+      &:link {
+        color: inherit;
+      }
+
+      &:visited {
+        color: inherit;
+      }
+    }
   }
 
   .list-entry {
@@ -137,6 +146,7 @@ $footerHeight: 0rem;
 
     .sidebar-content-content {
       grid-area: content;
+      overflow-y: auto;
     }
   }
 
